--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ targetCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 [compileJava, compileTestJava].each {
-    it.options.encoding = 'UTF-8'
+    //it.options.encoding = 'UTF-8'
     it.options.compilerArgs += [ '-source', '1.8', '-target', '1.8' ]
     }
 
