--- a/build.gradle
+++ b/build.gradle
@@ -41,22 +41,18 @@ repositories {
 
 
 configurations {
+    integrationTest.extendsFrom testRuntime
     all {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
         exclude group: "commons-logging"
         exclude module: "slf4j-log4j12"
         exclude module: "hibernate-jpa-2.0-api"
     }
-    intTest.extendsFrom testRuntime
+    
 }
 
 sourceSets {
-    intTest{
-        java.srcDir file('src/integration-test/java')
-        resources.srcDir file('src/integration-test/resources')
-        compileClasspath = sourceSets.main.output + configurations.testRuntime
-        runtimeClasspath = output + compileClasspath
-    }
+ 
     main {
         java { srcDir 'src/main/java' }
         groovy { srcDir 'src/main/groovy' }
@@ -67,6 +63,15 @@ sourceSets {
         groovy { srcDir 'src/test/groovy' }
         resources { srcDir 'src/test/resources' }
     }
+    integrationTest {
+        java.srcDir file('src/integration-test/java')
+        resources.srcDir file('src/integration-test/resources')
+        compileClasspath = sourceSets.main.output + configurations.testRuntime
+        runtimeClasspath = output + compileClasspath
+        
+ 
+    }
+ 
 }
 
 
@@ -96,7 +101,7 @@ sourceSets {
     
         compile ("com.sun.jersey:jersey-bundle:1.18")
         
-        compile("joda-time:joda-time:${jodaTimeVersion}")
+  
         compile("org.codehaus.jackson:jackson-mapper-asl:${jacksonMapperVersion}")
         compile("org.codehaus.jackson:jackson-core-asl:${jacksonMapperVersion}")
         //compiler("joda-time:joda-time-hibernate:1.3")
@@ -108,7 +113,6 @@ sourceSets {
         compile("com.jolbox:bonecp-spring:${bonecpVersion}")
         compile("com.jolbox:bonecp-provider:${bonecpVersion}")
     
-        runtime("org.hsqldb:hsqldb:${hsqldbVersion}")
         compile("org.aspectj:aspectjrt:${aspectJVersion}")
         compile("org.aspectj:aspectjweaver:${aspectJVersion}")
     
@@ -121,7 +125,6 @@ sourceSets {
        
         testCompile("junit:junit:$junitVersion")
         testCompile("org.easytesting:fest-assert:${festAssertVersion}")
-        testCompile("com.googlecode.catch-exception:catch-exception:1.2.0")
         testCompile ("org.springframework:spring-test:${springVersion}")
        
     }
@@ -165,19 +168,7 @@ sourceSets {
             'Built-Gradle': gradle.gradleVersion
         }
     }
-    
-   task intTest(type: Test) {
-        description = 'Runs the integration tests2.'
-        testClassesDir = sourceSets.intTest.output.classesDir
-        classpath = sourceSets.intTest.runtimeClasspath
-        }
-    
-    
-    task integration3Test(type: Test){
-        description = 'Runs the integration tests.'
-        testClassesDir = sourceSets.intTest.output.classesDir
-        classpath = sourceSets.intTest.runtimeClasspath       
-    }
+   
     
 task functionalTest () {
     doFirst{
@@ -195,8 +186,13 @@ task functionalTest () {
     }
 }
 
+task integrationTest(type: Test) {
+    description  = 'Run integration tests'
+    testClassesDir = sourceSets.integrationTest.output.classesDir
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    }
 
-   check.dependsOn intTest
+   check.dependsOn integrationTest
          
     task wrapper(type: Wrapper) { gradleVersion = '10.1' }
     
