--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ jacoco {
   toolVersion = '0.7.1.201405082137'
   reportsDir = file("$buildDir/reports/jacoco")
 }
-
+mainClassName = "pl.java.scalatech.main.Starter"
 applicationDefaultJvmArgs = ["-Dfile.encoding=UTF=8"]
 libsDirName = './target'
 
@@ -66,7 +66,7 @@ sourceSets {
     integrationTest {
         java.srcDir file('src/integration-test/java')
         resources.srcDir file('src/integration-test/resources')
-        compileClasspath = sourceSets.main.output + configurations.testRuntime
+        compileClasspath = sourceSets.main.output + configurations.integrationTest
         runtimeClasspath = output + compileClasspath
         
  
@@ -129,9 +129,9 @@ sourceSets {
        
     }
    
-  
-    
+ 
     test {
+        reports.html.destination = file ("$reports.html.destination/unit")
         testLogging {
           events "passed", "skipped", "failed", "standardOut", "standardError"
           showStandardStreams = false
@@ -160,7 +160,7 @@ sourceSets {
     
         exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
         manifest {
-            attributes 'Implementation-Title': 'Gradle camel-cxf',
+            attributes 'Implementation-Title': 'Gradle spring4features',
             'Implementation-Version': version,
             'Built-By': System.getProperty('user.name'),
             'Built-Date': new Date(),
@@ -190,6 +190,9 @@ task integrationTest(type: Test) {
     description  = 'Run integration tests'
     testClassesDir = sourceSets.integrationTest.output.classesDir
     classpath = sourceSets.integrationTest.runtimeClasspath
+    reports.html.destination = file("$reports.html.destination/integration")
+    minHeapSize = "256m"
+    maxHeapSize = "512m"
     }
 
    check.dependsOn integrationTest
