--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,6 +1,10 @@
 apply plugin: "groovy"
 apply from: './properties.gradle'
+
+
+
 dependencies {
+    compile 'org.springframework.data:spring-data-jpa'
     compile ("org.codehaus.groovy:groovy:${groovyVersion}")
     compile ("org.springframework:spring-core:${springVersion}")
     compile ("org.springframework:spring-beans:${springVersion}")
@@ -11,12 +15,9 @@ dependencies {
        
     compile ("org.springframework:spring-aspects:${springVersion}")
     compile ("org.springframework:spring-webmvc:${springVersion}")
-    
-    compile ("org.springframework.data:spring-data-neo4j-rest:3.0.0.RELEASE")
    
-    compile ("org.springframework.data:spring-data-neo4j:3.0.0.RELEASE")
-    compile ("org.springframework.data:spring-data-jpa:${springDataJPAVersion}")
-    compile ("org.springframework.hateoas:spring-hateoas:0.7.0.RELEASE")
+    compile ("org.springframework.data:spring-data-jpa:1.9.0.RELEASE")
+    compile ("org.springframework.hateoas:spring-hateoas:0.19.0.RELEASE")
     
     
     compile ("javax.validation:validation-api:${javaxValidationVersion}")
@@ -29,7 +30,7 @@ dependencies {
 
     compile("org.codehaus.jackson:jackson-mapper-asl:${jacksonMapperVersion}")
     compile("org.codehaus.jackson:jackson-core-asl:${jacksonMapperVersion}")
-    //compiler("joda-time:joda-time-hibernate:1.3")
+
 
     compile("org.projectlombok:lombok:${lombokVersion}")
     compile("com.google.guava:guava:${guavaVersion}")
@@ -49,7 +50,9 @@ dependencies {
     testCompile("org.mockito:mockito-all:$mockitoVersion")
    
     testCompile("junit:junit:$junitVersion")
-    testCompile("org.easytesting:fest-assert:${festAssertVersion}")
+    testCompile 'org.assertj:assertj-core:3.2.0'
+    testCompile 'com.jayway.awaitility:awaitility-java8:1.6.1'
+    testCompile 'com.jayway.awaitility:awaitility:1.6.5'
     testCompile ("org.springframework:spring-test:${springVersion}")
    
 }
