--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,7 +1,18 @@
 apply plugin: "groovy"
 apply from: './properties.gradle'
-
-
+buildscript {
+   
+    repositories {
+       jcenter()
+        mavenCentral()
+        maven { url "http://repo.spring.io/libs-release-local/"}
+        maven { url "http://repo.spring.io/libs-milestone" }
+        maven { url "http://m2.neo4j.org" }
+    }
+    dependencies {
+        classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
+    }
+}
 
 dependencies {
     compile 'org.springframework.data:spring-data-jpa'
@@ -34,10 +45,6 @@ dependencies {
 
     compile("org.projectlombok:lombok:${lombokVersion}")
     compile("com.google.guava:guava:${guavaVersion}")
-
-    compile("com.jolbox:bonecp:${bonecpVersion}")
-    compile("com.jolbox:bonecp-spring:${bonecpVersion}")
-    compile("com.jolbox:bonecp-provider:${bonecpVersion}")
 
     compile("org.aspectj:aspectjrt:${aspectJVersion}")
     compile("org.aspectj:aspectjweaver:${aspectJVersion}")
