--- a/properties.gradle
+++ b/properties.gradle
@@ -17,15 +17,10 @@ ext {
       jodaTimeHibernateVersion = "1.3"
       bonecpVersion = "0.7.1.RELEASE"
       hsqldbVersion = "2.3.1"
-      
-      groovyVersion = "2.2.1"
-      
-    
+      groovyVersion = '2.2.1'
       jacksonMapperVersion = "1.9.13"
-      
       lombokVersion = "1.16.4"
       guavaVersion = "18.0"
-            
       aspectJVersion = "1.7.4"
       javaVersion = "1.8"
 }
