--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -55,11 +55,16 @@ dependencies {
 
     testCompile("org.hamcrest:hamcrest-all:$hamcrestVersion")
     testCompile("org.mockito:mockito-all:$mockitoVersion")
-   
-    testCompile("junit:junit:$junitVersion")
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'org.apache.httpcomponents:httpclient:4.5'
+    testCompile 'org.apache.httpcomponents:fluent-hc:4.5'
+    testCompile 'com.jayway.jsonpath:json-path'
+    testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.2.0'
     testCompile 'com.jayway.awaitility:awaitility-java8:1.6.1'
     testCompile 'com.jayway.awaitility:awaitility:1.6.5'
-    testCompile ("org.springframework:spring-test:${springVersion}")
+    testCompile 'org.springframework:spring-test'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    
    
 }
