--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -69,7 +69,7 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.2.0'
     testCompile 'com.jayway.awaitility:awaitility-java8:1.6.1'
     testCompile 'com.jayway.awaitility:awaitility:1.6.5'
-    testCompile 'org.springframework:spring-test'
+    testCompile 'org.springframework:spring-test:4.2.2.RELEASE'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     
    
